--- a/index.html
+++ b/index.html
@@ -23,34 +23,31 @@
 				<span class="space"/><span class="comments">* i am a programmers,</span><br />
 				<span class="space"/><span class="comments">* so I write some code to record the time we love each other.</span><br />
 				<span class="space"/><span class="comments">*/</span><br />
-				Boy i = <span class="keyword">new</span> Boy(<span class="string">"hackerzhou"</span>);<br />
-				Girl u = <span class="keyword">new</span> Girl(<span class="string">"MaryNee"</span>);<br />
 				<span class="comments">// March 3, 2018, I told you I love you. </span><br />
 				<span class="comments">// Luckily, you accepted and became my girlfriend eversince.</span><br />
 				<span class="comments">// Since then, I miss u every day.</span><br />
 				<span class="comments">// And take care of u and our love.</span><br />
 				<span class="comments">// You say that you won't be so easy to marry me.</span><br />
 				<span class="comments">// So I keep waiting and I have confidence that you will.</span><br />
-				<span class="placeholder"/><span class="comments">// I think it is an important decision</span><br />
-				<span class="placeholder"/><span class="comments">// and you should think it over.</span><br />
+				<span class="comments">// I think it is an important decision</span><br />
+				<span class="comments">// and you should think it over.</span><br />
 				<span class="comments">// After a romantic wedding, we will live happily ever after.</span><br />
 			</div>
 			<div id="loveHeart">
 				<canvas id="garden"></canvas>
 				<div id="words">
 					<div id="messages">
-						Minyue, I have fallen in love with you for
+						Sarah, I have fallen in love with you for
 						<div id="elapseClock"></div>
 					</div>
 					<div id="loveu">
 						Love u forever and ever.<br/>
-						<div class="signature">- hackerzhou</div>
+						<div class="signature">- JakerXing</div>
 					</div>
 				</div>
 			</div>
 		</div>
 		<div id="copyright">
-			Inspired by <a href="http://www.openrise.com/lab/FlowerPower/">FlowerPower</a> project.<br />
 			Copyright © 2018 <a href='http://sarah.我爱你'>sarah.我爱你</a> 2018-2118
 		</div>
 	</div>
@@ -59,7 +56,7 @@
 		var offsetY = $("#loveHeart").height() / 2 - 55;
 		var together = new Date();
 		together.setFullYear(2018, 3, 3);
-		together.setHours(20);
+		together.setHours(24);
 		together.setMinutes(0);
 		together.setSeconds(0);
 		together.setMilliseconds(0);
