--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<div id="content">
 			<div id="code">
 				<span class="comments">/**</span><br />
-				<span class="space"/><span class="comments">* i am a programmers,</span><br />
+				<span class="space"/><span class="comments">* i am a programmer,</span><br />
 				<span class="space"/><span class="comments">* so I write some code to record the time we love each other.</span><br />
 				<span class="space"/><span class="comments">*/</span><br />
 				<span class="comments">// March 3, 2018, I told you I love you. </span><br />
