--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<div id="content">
 			<div id="code">
 				<span class="comments">/**</span><br />
-				<span class="space"/><span class="comments">* i am a programmer,</span><br />
+				<span class="space"/><span class="comments">* i am a programmer 1,</span><br />
 				<span class="space"/><span class="comments">* so I write some code to record the time we love each other.</span><br />
 				<span class="space"/><span class="comments">*/</span><br />
 				<span class="comments">// March 3, 2018, I told you I love you. </span><br />
@@ -56,7 +56,7 @@
 		var offsetY = $("#loveHeart").height() / 2 - 55;
 		var together = new Date();
 		together.setFullYear(2018, 11, 18);
-		together.setHours(24);
+		together.setHours(20);
 		together.setMinutes(0);
 		together.setSeconds(0);
 		together.setMilliseconds(0);
