--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 		<div id="content">
 			<div id="code">
 				<span class="comments">/**</span><br />
-				<span class="space"/><span class="comments">* I am a programmer ,</span><br />
-				<span class="space"/><span class="comments">* so I write some code to record the time we love each other.</span><br />
-				<span class="space"/><span class="comments">*/</span><br />
+				<span class="space"/><span class="comments">* I am a programmer ,</span><br /><br />
+				<span class="space"/><span class="comments">* so I write some code to record the time we love each other.</span><br /><br />
+				<span class="space"/><span class="comments">*/</span><br /><br />
 				<span class="comments">// March 3, 2018, I told you I love you. </span><br />
 				<span class="comments"> </span><br />
 				<span class="comments">// Luckily, you accepted and became my girlfriend eversince.</span><br />
