--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			<div id="code">
 				<span class="comments">/**</span><br />
 				<span class="space"/><span class="comments">* I am a programmer ,</span><br />
-				<span class="space"/><span class="comments">* so I write some code to record the time we fall in love.</span><br /><br />
+				<span class="space"/><span class="comments">* so I write some code to record the time we fall in love</span><br /><br />
 				<span class="space"/><span class="comments">*/</span><br />
 				<span class="comments"> </span><br />
 				<span class="comments">// March 3, 2018, I told you I love you. </span>
