--- a/index.html
+++ b/index.html
@@ -24,21 +24,21 @@
 				<span class="space"/><span class="comments">* so I write some code to record the time we fall in love</span><br />
 				<span class="space"/><span class="comments">*/</span><br />
 				<span class="comments"> </span><br />
-				<span class="comments">// March 3, 2018, I told you I love you. </span><br />
+				<span class="comments"> March 3, 2018, I told you I love you. </span><br />
 				<span class="comments"> </span><br />
-				<span class="comments">// Luckily, you accepted and became my girlfriend eversince.</span><br />
+				<span class="comments"> Luckily, you accepted and became my girlfriend eversince.</span><br />
 				<span class="comments"> </span><br />
-				<span class="comments">// Since then, I miss u every day.</span><br />
+				<span class="comments"> Since then, I miss u every day.</span><br />
 				<span class="comments"> </span><br />
-				<span class="comments">// And take care of u and our love.</span><br />
+				<span class="comments"> And take care of u and our love.</span><br />
 				<span class="comments"> </span><br />
-				<span class="comments">// Later we married.</span><br />
+				<span class="comments"> Later we married.</span><br />
 				<span class="comments"> </span><br />
-				<span class="comments">// I think it is an important decision</span><br />
+				<span class="comments"> I think it is an important decision</span><br />
 				<span class="comments"> </span><br />
-				<span class="comments">// Our life has a new beginning</span><br />
+				<span class="comments"> Our life has a new beginning</span><br />
 				<span class="comments"> </span><br />
-				<span class="comments">// After a romantic wedding, we will live happily ever after.</span><br />
+				<span class="comments"> After a romantic wedding, we will live happily ever after.</span><br />
 				<span class="comments"> </span><br />
 			</div>
 			<div id="loveHeart">
