--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 				<span class="comments"> </span><br />
 				<span class="comments"> Later we married.</span><br />
 				<span class="comments"> </span><br />
-				<span class="comments"> I think it is an important decision</span><br />
+				<span class="comments"> I think it is an important decision.</span><br />
 				<span class="comments"> </span><br />
-				<span class="comments"> Our life has a new beginning</span><br />
+				<span class="comments"> Our life has a new beginning.</span><br />
 				<span class="comments"> </span><br />
 				<span class="comments"> After a romantic wedding, we will live happily ever after.</span><br />
 				<span class="comments"> </span><br />
